@@ -301,6 +301,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("expand-quasiquote"),
         SA("export"),
         SA("export-syms"),
+        SA("expt"),
         SA("f"),
         SA("fail"),
         SA("fifth"),
@@ -467,6 +468,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("lv-alist"),
         SA("lvar"),
         SA("lvars"),
+        SA("m"),
         SA("macro"),
         SA("macroexpand"),
         SA("macroexpand-1"),
@@ -988,6 +990,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("top level :$:expand-clauses"),
         SA("top level :$:expand-let"),
         SA("top level :$:expand-quasiquote"),
+        SA("top level :$:expt"),
         SA("top level :$:field-name"),
         SA("top level :$:fifth"),
         SA("top level :$:file->string"),
