@@ -2,3 +2,6 @@ MOSH=../mosh
 
 test:
 	$(MOSH) -b tests/r6rs/run/mutable-strings.sps
+	$(MOSH) -b tests/r6rs/run/contrib.sps
+	$(MOSH) -b tests/r6rs/run/programs.sps
+	$(MOSH) -b tests/r6rs/run/control.sps
